urcu/tests/ui/list/iter-reverse-fail-1.stderr
error[E0505]: cannot move out of `guard` because it is borrowed
  --> tests/ui/list/iter-reverse-fail-1.rs:10:10
   |
8  |     let guard = context.rcu_read_lock();
   |         ----- binding `guard` declared here
9  |     let mut iter = list.iter_reverse(&guard);
   |                                      ------ borrow of `guard` occurs here
10 |     drop(guard);
   |          ^^^^^ move out of `guard` occurs here
11 |     log::info!("{:?}", iter.next());
   |                        ---- borrow later used here
